# hardguard25

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONFORMANCE.md  CONTRIBUTING.md  HUMAN_FACTORS.md  INTENT.md  LICENSE  LICENSE-SPEC  PROJECT_CONTEXT.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  SPEC.md  SPONSORS.md  assistant-guide.txt
.claude-plugin/: plugin.json
.github/: FUNDING.yml
.github/workflows/: pages.yml  release.yml  test.yml
conformance/: vectors.json
docs/: 404.html  CNAME  IMPLEMENTATION.md  ai-assisted-implementation.txt  ai-assisted-implementation.txt.sha256  index.html  llms.txt  robots.txt  site.webmanifest  sitemap.xml
docs/.well-known/: assistant-guide.txt  assistant-guide.txt.sha256
docs/generator/: index.html
go/: go.mod  hardguard25.go  hardguard25_test.go
handoffs/: 2026-07-21-post-1.3.5-opportunities.md
js/: README.md  index.js  index.test.js  package.json
python/: README.md  pyproject.toml
python/hardguard25/: __init__.py
python/tests/: test_hardguard25.py
scripts/: check-agent-surfaces.mjs  check-doc-examples.mjs  check-docs-generator.mjs  check-release-versions.mjs  check-url-conventions.mjs
skills/: skill-provenance
skills/hardguard25/: CHANGELOG.md  MANIFEST.yaml  SKILL.md
