[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hardguard25"
version = "1.3.5"
description = "HardGuard25: A 25-character low-confusion alphabet for human-readable identifiers."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    {name = "Snap Synapse", email = "info@snapsynapse.com"}
]
keywords = ["id", "uid", "unique-id", "identifier", "human-readable", "unambiguous"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[tool.setuptools.packages.find]
include = ["hardguard25*"]
exclude = ["tests*"]

[project.urls]
Homepage = "https://hardguard25.com/"
Documentation = "https://hardguard25.com/"
Specification = "https://github.com/snapsynapse/hardguard25/blob/main/SPEC.md"
Repository = "https://github.com/snapsynapse/hardguard25"
Changelog = "https://github.com/snapsynapse/hardguard25/blob/main/CHANGELOG.md"
Issues = "https://github.com/snapsynapse/hardguard25/issues"
Security = "https://github.com/snapsynapse/hardguard25/security/policy"
Funding = "https://github.com/sponsors/snapsynapse"

[tool.pytest.ini_options]
testpaths = ["tests"]
